Update and rename create_house_person to create_house_person.qmd

--- a/census/create_house_person.qmd
+++ b/census/create_house_person.qmd
@@ -1,3 +1,9 @@
+---
+title: "Census_Analysis"
+format: pdf
+editor: visual
+---
+
 ```{r}
 # Read first year
   file_path <- paste0("fixed_house_person_data/house_person_", 2019, ".csv")
