--- a/create_leases_ca.qmd
+++ b/create_leases_ca.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Create Leases"
+title: "Data Cleaning"
 author: "Dani Justo"
 format: pdf
 editor: visual
@@ -7,7 +7,7 @@ editor: visual
 ## Data Cleaning
 
 ```{r}
-# Filters to just CA
+# Filters to just California
 leases_ca <- leases |> filter(state == "CA")
 
 # Makes Indicator for Covid Beginning 
@@ -16,7 +16,7 @@ leases_ca |> mutate(covid = case_when(
     year >= 2020 ~ 1
   ))
 
-# Turn Quarters to Numeric Var
+# Turn Quarters to Numeric Variable
 leases_ca <- leases_ca |> mutate(quarter_num = case_when(
   quarter == "Q1" ~ 1,
   quarter == "Q2" ~ 2,
